Fix shipping address fields overflow

--- a/assets/sass/plugins/woocommerce/_cart.scss
+++ b/assets/sass/plugins/woocommerce/_cart.scss
@@ -510,7 +510,7 @@
 	.woocommerce-shipping-calculator {
 		position: relative;
 		width: calc(100% + 116px);
-        left: -116px;
+        left: -95px;
 	}
 }
 
